@@ -13,6 +13,7 @@
     * Redesign toolbar icons
     * Move sidebar options to separate window (accessed from "configure
       sidebar" link at the bottom of the sidebar)
+    * Fix custom date format in message detail
 
 2010-05-12:
     * version 0.7.7
